--- a/Reports/IEEE paper/IEEE-conference-template-062824.tex
+++ b/Reports/IEEE paper/IEEE-conference-template-062824.tex
@@ -71,6 +71,8 @@ vaznish@gmail.com}
     Existing systems suffer from several drawbacks. Most current systems do not provide livestream functionality\cite{ref1}\cite{ref2}. Some systems focus on the tracking of the health vitals of the mother and the prenatal baby\cite{ref3}. Several kinds of monitoring devices are developed for infant care with livestream functionality but often lack integration of multiple sensing modalities, leverage AI for posture detection or lack robust mechanisms for timely notifications, have no intelligent analysis to interpret collected data, and rarely support remote accessibility or timely alert mechanisms\cite{ref4}. Additionally, Some systems have one or more of the above mentioned functionalities in them, but none have all of them\cite{ref5}. 
     
     With advancements in sensor technology, cloud computing, and artificial intelligence, there is potential to revolutionize infant monitoring systems. This research introduces a cloud-based smart monitoring system that integrates multiple sensors and computer vision to analyze real-time health data. The system collects vital parameters such as body temperature, room temperature, humidity, and heart rate while simultaneously using computer vision to analyze the baby’s sleeping posture. By leveraging cloud-based data processing, the system ensures remote access and timely notifications to parents via a mobile application. The goal is to provide a reliable, real-time, and efficient infant monitoring solution that addresses the shortcomings of existing systems and enhances infant safety.
+
+    In Section II we discuss the literature survey, which highlights existing research and systems in the field of infant health monitoring. Section III outlines the methodology used in developing the proposed system, including data collection, real-time analysis, and alert mechanisms. Section IV presents the system design, including architectural diagrams and use case scenarios. Section V details the implementation process, covering both hardware and software components. Finally, Section VI discusses the results obtained from testing the system and provides insights into its performance and future scope.
 \section{Literature Survey}
 Several studies have explored the use of IoT, cloud computing, and AI in health monitoring systems. H Alam et al. developed a wearable IoT-based monitoring system to track vital signs and sleeping posture; however, its reliance on physical wearables made it less comfortable for infants \cite{ref1}. Y Singh introduced a smart crib with integrated motion and temperature sensors, though it lacked cloud connectivity, restricting remote access \cite{ref2}. Similarly, M M Hossain et al. examined how cloud-based health monitoring can provide real-time access to data, but concerns regarding data security and latency were highlighted \cite{ref3}.  
 
