--- a/Reports/IEEE paper/IEEE-conference-template-062824.tex
+++ b/Reports/IEEE paper/IEEE-conference-template-062824.tex
@@ -74,14 +74,25 @@ vaznish@gmail.com}
 
     In Section II we discuss the literature survey, which highlights existing research and systems in the field of infant health monitoring. Section III outlines the methodology used in developing the proposed system, including data collection, real-time analysis, and alert mechanisms. Section IV presents the system design, including architectural diagrams and use case scenarios. Section V details the implementation process, covering both hardware and software components. Finally, Section VI discusses the results obtained from testing the system and provides insights into its performance and future scope.
 \section{Literature Survey}
-Several studies have explored the use of IoT, cloud computing, and AI in health monitoring systems. H Alam et al. developed a wearable IoT-based monitoring system to track vital signs and sleeping posture; however, its reliance on physical wearables made it less comfortable for infants \cite{ref1}. Y Singh introduced a smart crib with integrated motion and temperature sensors, though it lacked cloud connectivity, restricting remote access \cite{ref2}. Similarly, M M Hossain et al. examined how cloud-based health monitoring can provide real-time access to data, but concerns regarding data security and latency were highlighted \cite{ref3}.  
+Several studies have explored the use of IoT, cloud computing, and AI in health monitoring systems. Alam et al. proposed an IoT-based smart baby monitoring system that tracks room temperature, humidity, and crying sounds using sensors, and detects facial emotions via a machine learning model applied to webcam feeds. It allows remote cradle control and live video streaming. However, it lacks posture detection and vital health monitoring\cite{ref1}.
 
-The use of machine learning in posture recognition has also been investigated. Convolutional neural networks (CNNs) were employed to detect human sleeping postures with high accuracy \cite{ref4}. S Joseph et al. applied deep learning techniques to monitor postural changes in healthcare applications, demonstrating promising results for infant monitoring \cite{ref5}. However, these studies did not integrate a real-time alert system for immediate intervention.  
+Singh proposed an IoT-based baby monitoring system using NodeMCU and sensors to monitor ambient conditions and crying. The system includes remote cradle control and toy activation via a Blynk server. A health algorithm analyzes stored data for symptom detection. While cost-effective, it lacks cloud integration and real-time posture or vital monitoring\cite{ref2}.
 
-Moreover, the potential of cloud computing in healthcare applications has been well-documented. M R Kumar et al. explored cloud-based storage and processing for medical applications, emphasizing the benefits of scalability and remote accessibility \cite{ref6}. However, concerns about network reliability and data security were noted. S Mishra demonstrated how cloud computing could enhance real-time health monitoring systems but emphasized the need for efficient data handling mechanisms \cite{ref7}.  
+Hossain et al. conducted a review on IoT-based systems for pregnancy, postpartum, and neonatal care. It evaluated various IoT models and wearables for maternal and neonatal health but focused more on frameworks than real-time monitoring for infants\cite{ref3}.
 
-The integration of IoT and AI in healthcare applications has also been explored. D T P Hapsari et al. examined how sensor networks could be utilized for infant health monitoring, but the lack of an AI-driven analytical model limited its effectiveness \cite{ref8}. F Akta et al. investigated a multi-sensor approach for monitoring infant vitals, highlighting the importance of combining multiple data sources for improved accuracy \cite{ref9}. These studies collectively suggest that a holistic system combining IoT, cloud computing, and AI-driven analysis is required to create a comprehensive infant monitoring solution.  
+Salehin et al. developed an IoT-enabled baby monitoring system using face recognition, sound sensors, and Raspberry Pi with a Pi camera for live streaming. The system also monitors diaper moisture. However, it lacks cloud analytics and AI-based health parameter analysis\cite{ref4}.
 
+Joseph et al. proposed an IoT-based smart cradle with sound-activated swinging and continuous surveillance. While cost-effective, it lacks posture detection and AI-enhanced health analysis\cite{ref5}.
+
+Kumar et al. presented an IoT-based baby monitoring system aimed at reducing SIDS. It uses a Raspberry Pi, sensors for temperature, heart rate, SPO2, and posture detection. Though effective, concerns like latency and data privacy remain\cite{ref6}.
+
+Mishra developed an RTOS-based web-connected baby monitoring system that streams live video and environmental data. However, it focuses on video streaming without integrating health parameters or posture detection. Our system improves on this by adding real-time health monitoring, AI-driven posture detection, and cloud-based alerts\cite{ref7}.
+
+Hapsari et al. proposed a smart caregiving support system with real-time cry analysis using machine learning and IoT connectivity. Their system lacks integration with other vital health parameters like temperature and posture. Our system provides a more comprehensive solution with monitoring of multiple health parameters and cloud-based alerts\cite{ref8}.
+
+Akta developed a real-time infant monitoring system for hard-of-hearing parents, tracking body temperature and heart rate with tactile alerts. However, it lacks cloud-based monitoring, AI-driven posture detection, and health parameter analysis. Our system offers a more scalable solution with advanced features for continuous care\cite{ref9}.
+
+These studies suggest that a holistic system combining IoT, cloud computing, and AI is required to create a comprehensive infant monitoring solution.
 \section{Methodology}
 The implementation of the proposed Cloud-Based Smart Monitoring System for Baby Health and Safety follows a structured methodology to ensure real-time data collection, processing, and alert mechanisms. The system architecture consists of multiple integrated components, including sensor modules, cloud computing, and real-time analysis for unsafe sleeping posture detection.
 
