--- a/Reports/IEEE paper/IEEE-conference-template-062824.tex
+++ b/Reports/IEEE paper/IEEE-conference-template-062824.tex
@@ -136,7 +136,7 @@ This systematic approach ensures real-time infant health monitoring with high ac
 
 
 \section{System Design}
-This chapter outlines the system design for the Cloud-Based Smart Monitoring System for Baby Health and Safety, detailing the system's architecture, functionality, control flow, access layers, and user interface design. Each section includes design diagrams, descriptions, and an explanation of how they apply to the project.
+This section outlines the system design for the Cloud-Based Smart Monitoring System for Baby Health and Safety, detailing the system's architecture, functionality, control flow, access layers, and user interface design. Each section includes design diagrams, descriptions, and an explanation of how they apply to the project.
 \subsection{Abstract Design}
 
 \subsubsection{Architectural diagram}
