--- a/Reports/IEEE paper/IEEE-conference-template-062824.tex
+++ b/Reports/IEEE paper/IEEE-conference-template-062824.tex
@@ -154,7 +154,7 @@ These sensors collect real-time data from the baby’s physical environment, cov
 
 \textbf{Alerts and Notifications:} The system is designed to provide timely alerts. When abnormal readings or unsafe sleeping postures are detected, the mobile app immediately notifies the user, allowing them to take quick action. The database and ML model work together to process and extract data, ensuring that alerts are accurate and meaningful.
 
-\textbf{Summary:} This architecture ensures seamless data flow from sensing, processing, and alerting to final user interaction. This integrated approach enhances baby monitoring, helping caregivers make informed decisions to ensure the baby's safety and well-being.
+ This architecture ensures seamless data flow from sensing, processing, and alerting to final user interaction. This integrated approach enhances baby monitoring, helping caregivers make informed decisions to ensure the baby's safety and well-being.
 
 
 \begin{figure}[hbtp]
