--- a/Reports/IEEE paper/IEEE-conference-template-062824.tex
+++ b/Reports/IEEE paper/IEEE-conference-template-062824.tex
@@ -183,7 +183,7 @@ Overall, the system combines real-time monitoring, data storage, and expert feed
   \label{fig:usecase}
 \end{figure}
 \subsection{Functional Design}
-\subsubsection{Sequence diagram}
+\subsubsection*{Sequence diagram}
 
 Fig. \ref{fig:sequence} illustrates the workflow of a Cloud-Based Smart Monitoring System for Baby Health and Safety. Here’s a breakdown of the interactions among various components in the system:
 
