--- a/Reports/IEEE paper/IEEE-conference-template-062824.tex
+++ b/Reports/IEEE paper/IEEE-conference-template-062824.tex
@@ -248,8 +248,8 @@ The hardware implementation involved integrating various sensors and a camera mo
     \item The Raspberry Pi was configured to send the processed data to Firebase over a Wi-Fi connection.
   \end{itemize}
 \end{itemize}
-\subsubsection{CAD representation of the hardware setup}
-Shown in Fig. \ref{fig:hardware} is the 3D pictorial representation of the hardware setup which consists of Raspberry Pi, power adaptor and all the sensors along with the camera.
+\subsubsection{Hardware setup}
+Shown in Fig. \ref{fig:hardware} is the representation of the hardware setup which consists of Raspberry Pi, power adaptor and all the sensors along with the camera.
 \begin{figure}[htbp]
   \centering
   \includegraphics[scale=0.65]{./pic/hardware.png}
