--- a/Reports/Project_Report_8sem/Report.tex
+++ b/Reports/Project_Report_8sem/Report.tex
@@ -215,14 +215,14 @@ the bonafide students of VIII semester Computer Science \& Engineering in partia
 
 \setstretch{1.5}
 \begin{flushleft}
-\textbf{Aaron Tauro  USN:4SO21CS002}\\
-\vspace{0.1in}
-\textbf{Abhik L Salian  USN:4SO21CS004}\\
-\vspace{0.1in}
-\textbf{Akhil Shetty M  USN:4SO21CS013}\\
-\vspace{0.1in}
-\textbf{H Karthik P Nayak  USN:4SO21CS058}\\
+\begin{tabular}{l l}
+\textbf{Aaron Tauro}         & \textbf{USN: 4SO21CS002} \\
+\textbf{Abhik L Salian}      & \textbf{USN: 4SO21CS004} \\
+\textbf{Akhil Shetty M}      & \textbf{USN: 4SO21CS013} \\
+\textbf{H Karthik P Nayak}   & \textbf{USN: 4SO21CS058} \\
+\end{tabular}
 \end{flushleft}
+
 
 % \newpage
 \setstretch{1.2}
@@ -965,22 +965,22 @@ The Sign Up page (Figure \ref{fig:sign-up}) allows new users to create an accoun
 The dashboard given in Figure \ref{fig:dashboard} provides a real-time display of the baby's vital signs, including body temperature, heart rate, SpO2, and humidity. 
 % It serves as the central hub for live monitoring, ensuring parents have instant access to critical health data.
 
-\begin{figure}[htbp]
-  \centering
-  \begin{subfigure}[b]{0.22\textwidth}
+% \begin{figure}[htbp]
+  % \centering
+  \begin{figure}[htbp]
     \centering
-    \includegraphics[width=\textwidth]{./pic/dashboard.jpeg}
-    \caption{Dashboard - Light theme}
-    \label{fig:dashboard-light}
-\end{subfigure}
+    \includegraphics[scale=0.2]{./pic/dashboard.jpeg}
+%     \caption{Dashboard - Light theme}
+%     \label{fig:dashboard-light}
+% \end{figure}
 % \hfill
-  \hspace{0.1\textwidth}
-  \begin{subfigure}[b]{0.22\textwidth} % Adjust width
-      \centering
-      \includegraphics[width=\textwidth]{./pic/dark-mode.jpeg}
-      \caption{Dashboard - Dark theme}
-      \label{fig:dashboard-dark}
-  \end{subfigure}
+  % \hspace{0.1\textwidth}
+  % \begin{subfigure}[b]{0.22\textwidth} % Adjust width
+  %     \centering
+  %     \includegraphics[width=\textwidth]{./pic/dark-mode.jpeg}
+  %     \caption{Dashboard - Dark theme}
+  %     \label{fig:dashboard-dark}
+  % \end{subfigure}
   
   
   \caption{Comprehensive real-time display of vital health parameters.}
@@ -990,7 +990,7 @@ The dashboard given in Figure \ref{fig:dashboard} provides a real-time display o
 Figure \ref{fig:graph} visualizes the historical fluctuations in the baby’s vitals through interactive graphs. Parents can track trends over time to identify patterns or anomalies in the baby's health.
 \begin{figure}[htbp]
   \centering
-  \includegraphics[scale=0.1]{./pic/graphs.jpeg}
+  \includegraphics[scale=0.2]{./pic/graphs.jpeg}
   \caption{Graph page for detailed visualization of historical health data trends.}
   \label{fig:graph}
 \end{figure}
@@ -998,7 +998,7 @@ Figure \ref{fig:graph} visualizes the historical fluctuations in the baby’s vi
 The live-feed page in Figure \ref{fig:live-feed} streams video from the camera in real time, allowing parents to monitor the baby's movements and posture. This feature helps ensure the baby's safety by detecting abnormal sleeping positions or other concerns.
 \begin{figure}[htbp]
   \centering
-  \includegraphics[scale=0.15]{./pic/live-feed.jpeg}
+  \includegraphics[scale=0.2]{./pic/live-feed.jpeg}
   \caption{Live-feed page for seamless live video monitoring for enhanced baby safety.}
   \label{fig:live-feed}
 \end{figure}
@@ -1247,8 +1247,8 @@ By addressing these areas, the system can evolve into a more comprehensive and u
 \printbibliography
 
 % \includepdf[pages=-]{GA6.pdf}
-% \includepdf[pages={1}]{DB_report_230-IEEE-Saumya.pdf}
+\includepdf[pages={1}]{Project_Report Baby (1).pdf}
 % \includepdf[pages=-]{DB_Summary_report_230-IEEE-Saumya.pdf}
-% \includepdf[pages=-]{230-IEEE-Saumya.pdf}
+\includepdf[pages=-]{IEEE-conference-template-062824.pdf}
 
 \end{document}
